# AssistantGlasses

./: .gitignore  LICENSE  main.py  pyproject.toml  requirements.txt  sketch.py  src.py  videoStreaming.py
Agent/: config.py  request.py  test.py
Agent/code/: chat.py  config.py  request.py  utils.py
Agent/test/: test.py  tool_test.py
Gemma/: config.py  download.py  model.py
metric_depth/: run.py
metric_depth/depth_anything_v2/: dpt.py
navigation_module/: README.md  test.py
navigation_module/algo/fusion/: base_filter.py  linear_kalman.py
navigation_module/algo/geo/: coord_transform.py  haversine.py
navigation_module/config/: config_loader.py  system_config.yaml
navigation_module/core/: main.py  nav_controller.py
navigation_module/sensors/: base_sensor.py
navigation_module/sensors/gnss/: mock_reader.py  nmea_parser.py  serial_reader.py
navigation_module/services/: amap_provider.py  base_map_api.py
navigation_module/tests/mock_data/: nmea_sample.txt
navigation_module/utils/: logger.py
speech_module/: README.md  install.py  requirements.txt  upgrade.py
speech_module/stream/: activate.py  record.py  utils.py
speech_module/tests/: .gitignore  speech_recognition.py  synthesize.py  wake_word.py
speech_module/tests/examples/: beautiful_music.m4a
vision_module/: local_metric_depth.py  local_relative.py
vision_module/metric_depth/: train.py
voice_module/: config.py  edge_tts.py  read.py
whisper/: .gitignore  install.py
whisper/stream/: activate.py  record.py  utils.py
whisper/tests/: speech_recognition.py  wake_word.py
